# protoc-polyglot

./: .gitignore  README.md  cli.py  pyproject.toml  upload-to-pypi.sh
.github/workflows/: build.yml
api-server/: main.py  requierements.txt  test_main.http
client/: README.md
core/: cli.py  wrapper.py
core-tools/: cli.py
core-tools/cpp/: cli.py
core-tools/go/: cli.py
core-tools/java/: cli.py
core-tools/js/: cli.py
core-tools/python/: cli.py
core-tools/rust/: cli.py
core/cpp/: cli.py
core/csharp/: cli.py
core/go/: cli.py
core/java/: cli.py
core/js/: cli.py
core/obj-c/: cli.py
core/php/: cli.py
core/python/: cli.py
core/ruby/: cli.py
core/rust/: cli.py
doc-example/: bookclub.md
docker/: protoc-polyglot-server-x64.dockerfile  protoc-polyglot-x64.dockerfile  protoc_polyglot_x64.dockerfile
java/: cli.py
protoc-client/: client.py  requierements.txt
protoc-polyglot/: cli.py  wrapper.py
protoc-polyglot/cpp/: cli.py
protoc-polyglot/csharp/: cli.py
protoc-polyglot/python/: cli.py
protoc-polyglot/rust/: cli.py
protoc-server/: main.py
protoc_polyglot/: __init__.py  cli.py  common_interface.py  settings.py  tools.py  wrapper.py
protoc_polyglot/cpp/: cli.py  core.py  language_interface.py
protoc_polyglot/csharp/: cli.py  core.py  language_interface.py
protoc_polyglot/go/: cli.py  core.py  language_interface.py
protoc_polyglot/java/: cli.py  core.py  language_interface.py
protoc_polyglot/js/: __init__.py  cli.py  language_interface.py
protoc_polyglot/obj-c/: cli.py  core.py  language_interface.py
protoc_polyglot/php/: cli.py  core.py  language_interface.py
protoc_polyglot/python/: cli.py  core.py  language_interface.py
protoc_polyglot/ruby/: __init__.py  cli.py  core.py  language_interface.py
protoc_polyglot/rust/: __init__.py  cli.py  core.py  language_interface.py
protos/bookclub/: bookclub.proto  member.proto
python/: cli.py
samples/: services.yml
samples/bookclub/: book.proto  bookclub.proto  member.proto
samples/first-service/: first.proto
tests/: run.sh
tools/: cli.py
tools/cpp/: cli.py
tools/js/: cli.py
tools/python/: cli.py
web/: README.md
