[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "protoc_polyglot/*",
]

[tool.hatch.build.targets.wheel]
include = [
  "protoc_polyglot/*",
]

#[app]
#module = "protoc_polyglot"

#[tool.hatch.build.targets.wheel.sources]
#"protoc_polyglot" = "protoc_polyglot"

[project]
name = "protoc_polyglot"
version = "0.0.1-61"
license = {text = "MIT License"}
authors = [
  { name="Milan Pultar", email="milan.pultar@gmail.com" },
  { name="Hugo Kunák", email="author@example.com" },
]
description = "Protoc wrapper for compilation into any language"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fire",
  "pyyaml",
  "requests",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[bdist_wheel]
universal=1

#[tool.hatch.scripts]
#protoc-polyglot = "protoc_polyglot.wrapper:execute"

[project.scripts]
protoc-polyglot = "protoc_polyglot.wrapper:execute"

#[tool.hatch.build.target.sdist.force-include]
#"protoc_polyglot" = "protoc_polyglot/*"